# fiap-tech-challenge-fase1

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.history/: pyproject_20250524110034.toml  pyproject_20250524111336.toml  pyproject_20250524111628.toml  pyproject_20250524112708.toml
app/: adapters.py  main.py  models.py  routes.py  services.py
app/adapters/: __init__.py  backup.py  embrapa_scraper.py  local_backup.py  scraper.py
app/core/: config.py  security.py
app/models/: __init__.py  auth.py  data.py  schemas.py  user.py
app/routers/: __init__.py  auth.py  dados.py  health.py  vitibrasil_router.py
app/services/: __init__.py  auth.py  scraping.py  utils.py  vitibrasil_service.py
data/: comercializacao.json  exportacao.json  importacao.json  processamento.json  producao.json  users.json
tests/: test_adapters.py  test_services.py
